--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,38 @@
-
+#springboot.basepackage=
+#访问的根路径
+#server.servlet.context-path=/springboot
+#端口号
+server.port=8060
+spring.main.allow-bean-definition-overriding=true
+#session失效时间
+#server.session-timeout=30
+#编码
+#server.tomcat.uri-encoding=utf-8
+#通用数据源配置
+#com.mysql.jdbc.Driver
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://129.204.114.165:3306/maxzhao_ittest?charset=utf8mb4&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=19961022lS
+#oracle
+#spring.datasource.driverClassName=oracle.jdbc.driver.OracleDriver
+#spring.datasource.url=jdbc:oracle:thin:@192.168.0.124:1521:orcl
+#spring.datasource.username=jsjgjc
+#spring.datasource.password=jsjgjc
+#spring.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+#这里getCurrentSession本地事务(本地事务:jdbc)时 要在配置文件里进行如下设置
+#* 如果使用的是本地事务（jdbc事务）
+#hibernate.current_session_context_class=thread
+#* 如果使用的是全局事务（jta事务）
+hibernate.current_session_context_class=jta
+# Hikari 数据源专用配置
+spring.datasource.hikari.maximum-pool-size=20
+spring.datasource.hikari.minimum-idle=5
+# JPA 相关配置
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
+spring.jpa.show-sql=true
+spring.jpa.open-in-view=false
+spring.jpa.hibernate.ddl-auto=update
+#不加此配置，获取不到当前currentsession
+spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate5.SpringSessionContext
