--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -53,21 +53,21 @@ spring.thymeleaf.mode=HTML5
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.servlet.content-type=text/html
-
-# Redis 数据库索引
-spring.redis.host=129.204.114.165
-spring.redis.port=6379
-spring.redis.password=maxzhao
-# 连接池最大连接数
-spring.redis.jedis.pool.max-active=1000
-# 连接池最大阻塞等待时间，负值没有限制
-spring.redis.jedis.pool.max-wait=-1
-# 连接池中最大空闲连接
-spring.redis.jedis.pool.max-idle=10
-# 连接池中的最小空闲连接
-spring.redis.jedis.pool.min-idle=2
-# 超时时间 毫秒
-spring.redis.timeout=10000
+#
+## Redis 数据库索引
+#spring.redis.host=129.204.114.165
+#spring.redis.port=6379
+#spring.redis.password=maxzhao
+## 连接池最大连接数
+#spring.redis.jedis.pool.max-active=1000
+## 连接池最大阻塞等待时间，负值没有限制
+#spring.redis.jedis.pool.max-wait=-1
+## 连接池中最大空闲连接
+#spring.redis.jedis.pool.max-idle=10
+## 连接池中的最小空闲连接
+#spring.redis.jedis.pool.min-idle=2
+## 超时时间 毫秒
+#spring.redis.timeout=10000
 
 
 
